tests/sksl/errors/CanExitWithoutReturningValue.glsl
### Compilation failed:

error: 1: function 'foo' exits without returning a value
1 error
